Navbar fixed on mobile screen and pc screen

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ footer {
 
 
 .donate-item{
+  width: 50px;
   position: relative;
   left: 50%;
 }
